# monitor-switch

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/: ConfigManager.h  DisplayDevice.h  DisplayDeviceId.h  DisplayDeviceManager.h  InterOp.h  MonitorSwitchCLI.h
cpp/include/mccs/2.2a/: InputSource.h  codes.h
cpp/include/mccs/base/: InputSource.h
cpp/src/: ConfigManager.cpp  DedicatedMain.cpp  DisplayDevice.cpp  DisplayDeviceId.cpp  DisplayDeviceManager.cpp  MonitorSwitchCLI.cpp  handle_info.cpp  main.cpp  vcp.cpp
cpp/src/mccs/2.2a/: InputSource.cpp
data/: laptop  pc  pc2  rdp
lib/: CMakeLists.txt
lib/include/mccs/base/: codes.h
lib/src/: battery.cpp  display_device.cpp  main.cpp  setup_api.cpp  vcp.cpp
